Fix table appearance on smaller devices.

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -294,6 +294,20 @@ table {
       padding-top: 0;
     }
   }
+
+  tr {
+    > *:first-child {
+      @include mixins.breakpoint-down(medium) {
+        padding-left: variables.$base-line-height;
+      }
+    }
+
+    > *:last-child {
+      @include mixins.breakpoint-down(medium) {
+        padding-right: variables.$base-line-height;
+      }
+    }
+  }
 }
 
 ul {
